[package]
name = "sdl_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.2", features = [
    "ttf",
    "image",
    "gfx",
    "mixer",
    "static-link",
    "use-pkgconfig",
] }
num = "0.4.0"
rand = "0.8.5"


[dependencies.gl]
git = "https://github.com/bjz/gl-rs"